--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 }
 
 body {
-    overflow-x: hidden;
     background-color: #fdcae1;
     font-family: sans-serif;
     overflow: hidden;
@@ -14,6 +13,7 @@ body {
     justify-content: center;
 }
 .content {
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     text-align: center;
